@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.4315 2019/10/11 23:47:51 gdt Exp $
+$NetBSD: CHANGES-2019,v 1.4316 2019/10/12 08:57:12 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -6939,3 +6939,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated sysutils/py-psutil to 5.6.3nb2 [kamil 2019-10-11]
 	Updated pkgtools/pkglint to 19.3.1 [rillig 2019-10-11]
 	Updated print/gutenprint-lib to 5.3.3 [gdt 2019-10-11]
+	Removed textproc/py-tinycss successor textproc/py-tinycss2 [wiz 2019-10-12]
